if(WITH_XC_AUTOTYPE)
    if(UNIX AND NOT APPLE AND NOT HAIKU)
        find_package(X11 REQUIRED COMPONENTS Xi XTest)
        if(PRINT_SUMMARY)
            add_feature_info(libXi X11_Xi_FOUND "The X11 Xi Protocol library is required for auto-type")
            add_feature_info(libXtst X11_XTest_FOUND "The X11 XTEST Protocol library is required for auto-type")
        endif()

        add_subdirectory(xcb)
    elseif(APPLE)
        add_subdirectory(mac)
    elseif(WIN32)
        add_subdirectory(windows)
    endif()

    if(WITH_TESTS)
        add_subdirectory(test)
    endif()
endif()
